--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,14 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
-    Sample App
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>OrthoAI</title>
   </head>
-
   <body>
-    <h1>Hello World</h1>
+    <h1>Upload Image</h1>
+    <form action="/upload" method="post" enctype="multipart/form-data">
+      <input type="file" name="file" accept=".jpg, .jpeg, .png" />
+      <button type="submit">Submit</button>
+    </form>
   </body>
 </html>
