--- a/templates/result.html
+++ b/templates/result.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>OrthoAI Results</title>
+    <title>FunnyBone Detection</title>
   </head>
   <body>
     <h1>Results</h1>
