--- a/templates/result.html
+++ b/templates/result.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FunnyBone Detection</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
   <body>
     <h1>Results</h1>
@@ -12,7 +14,7 @@
     </div>
     <img src="{{ url_for('result_image') }}" alt="Result Image" width="512" height="512">
     <form action="/report" method="get" enctype="multipart/form-data">
-      <button type="submit">Generate Report</button>
+      <button class="btn btn-primary" type="submit">Generate Report</button>
     </form>
 </body>
 </html>
